- ensure /etc/sysconfig/console/default.kmap is generated with installed
  keymaps, not installer simplified (?) .bkmap (#35376)
- add /etc/mke2fs.conf symlink so that mke2fs can use it (cf #27377)

Version 10.5.5 - 14 November 2007, by Pascal "Pixel" Rigaux

- adapt to cooker: 
  o kbd_drv.so instead of keyboard_drv.so
  o DejaVuSansBold*.ttf instead of DejaVuSans-Bold*.ttf

Version 10.5.4 - 13 November 2007, by Pascal "Pixel" Rigaux

- use UUID by default (in fstab, bootloader)
- localedrake:
  o fix handling variant together with charset (eg: uz.UTF-8@Latn) (#35090)
- partitioning wizard: ensure existing_part and resize_fat are proposed before
  wipe_drive
- in case of ftp/http media, we select basesystem before doing
  bestKernelPackage so we must ensure the choice callback selects the good
  kernel (reported by Thomas Spuhler on cooker mailing list)
- do propose "Suisse" after selecting french language (#34675)
- use time() to know when to timeout (when launching installer X server)
  since the loop may be slower than 1 second (xf86misc::main::Xtest takes time
  on a failing X server on i810). Also print a message telling user to wait
  after 8 seconds.

Version 10.4.238 - 5 October 2007, by Pascal "Pixel" Rigaux

- do not use pseudo Protocol "vboxmouse" during install, use "IMPS/2" instead

Version 10.4.236 - 4 October 2007, by Pascal "Pixel" Rigaux

- fix copying of ../../i586/media/main medium 
  (for dual_arch CDs sharing the i586 medium)
- fix configuring kdeglobals (was broken because of /etc/kderc using
  udpate-alternatives which use absolute symlinks)

Version 10.4.233 - 4 October 2007, by Pascal "Pixel" Rigaux

- use /dev/cdrom in fstab, but do not write corresponding udev rule
  (the rules will be generated at boot time otherwise it won't catch the
  hdX/srX switch)

Version 10.4.232 - 4 October 2007, by Olivier "blino" Blin

- add helper to get kernel module path (to be used in draklive)

Version 10.4.228 - 3 October 2007, by Pascal "Pixel" Rigaux
